# orbiter

./: .gitignore  GUIDELINES.md  Makefile  README.md  build  import  orbiter-design.xcf  orbiter-prev.c  orbiter2.c  project.json  silver
agent/: agent.cpp  mod
agent/apps/: agent.cpp  example.cpp
app/: app.c99  command.cc  orbiter  orbiter-agent  orbiter-agent.c  orbiter.c  orbiter.sf
earth-moon/: Cargo.toml  main.rs  shader.wgsl
ggml/: command.cc
lib/: common-sdl.h  orbiter
res/images/: equirect.exr
res/models/: env.blend  flower88.2.blend1  flower88.2.gltf  hinge.blend1  hinge.gltf  orbiter.blend  orbiter.gltf  orbiter2.gltf  orbiter4.blend1  ray-march.blend  ray-march.gltf
res/shaders/: cube.frag  cube.vert
share/apps/: orbiter.ason
share/models/: A44.blend  earth.blend  earth.blend1  earth.gltf  env.blend1  flower22.mtl  flower88.4.blend  flower88.4.blend1  flower88.4.gltf  flower88.8.blend  flower88.8.blend1  flower88.blend  flower888.blend  flower888.blend1  flower8888.gltf  flower88882.gltf  mirror.blend  orbiter.blend1  orbiter.gltf  orbiter2.blend  orbiter2.gltf  orbiter4.blend  orbiter4.blend1  quad.blend  quad.blend1  quad.gltf  ray-march.gltf  sphere.gltf  uv-quad.gltf  uv-quad2.gltf  uv-sphere.blend  uv-sphere.blend1  uv-sphere.gltf  uvsphere.mtl
share/shaders/: audrey  audrey.frag  audrey.vert  blur-v  blur-v.frag  blur-v.vert  blur.frag  blur.vert  cloud.frag  cloud.vert  earth  earth.frag  (+11 more)
sync/: mod  orbiter.gen1.bak  station.gen1.bak  sync.cpp  sync.hpp
textmate/: mod  textmate.cpp  textmate.hpp
watch/: mod  watch.cpp  watch.hpp
(+22 files in other folders)
